polish the readme file.