@@ -3,38 +3,80 @@
 ### What is this repository for? ###
 * Quick summary
 
-用来开发spring-boot可执行jar项目的环境.
+本实例用CentOS7做基础, 安装了Oracle, 用来为spring-boot可执行jar工程提供运行时环境.
 
-This container inherits from **CentOS**, and have latest java runtime environment installed. It's the best choice for developing spring-boot executable jar project. 
+This container inherits from **CentOS**, and have oracle java 8 runtime environment installed. It's the best choice for developing spring-boot executable jar project. 
 
-* Version 1.0
+### start using docker-compose
 
-### How do I get set up? ###
+``` 
+docker-compose up -d 
+```
+
+docker-compose.yml
+
+```yml
+version: '3.4'
+networks:
+    webnet:
+        driver: bridge
+services:
+    webapp:
+        image: registry.cn-qingdao.aliyuncs.com/qijunbo/jdk:8
+        ports:
+            - 8080:80
+        restart: always
+        environment:
+            JAVA_OPTS: -server -Xms256m -Xmx1024m -XX:MaxPermSize=256m -Duser.timezone=Asia/Shanghai
+        volumes:
+            - ./app.jar:/app/webapp.jar
+```
+
 
 * Configuration
 
-虽然下面暴露80等4个端口, 但是具体多少个会生效取决于你在 application.yml里面的配置. 本例使用的80端口,其他无效.
+虽然下面暴露80等3个端口, 但是具体多少个会生效取决于你在 application.yml里面的配置. 本例使用的80端口,其他无效.
 
 ```
-FROM centos
-RUN yum install -y java
-VOLUME /root/webapp
-WORKDIR /root/webapp
-EXPOSE 80 8080 443 8443
-CMD  java -jar *.jar
+FROM centos:7.5.1804
+ADD jdk-8u151-linux-x64.rpm .
+RUN rpm -ivh jdk-8u151-linux-x64.rpm
+RUN rm -f jdk-8u151-linux-x64.rpm
+ENV JAVA_OPTS=""
+VOLUME /app
+WORKDIR /app
+EXPOSE 80 8080 443
+COPY  docker-entrypoint.sh /bin/
+ENTRYPOINT docker-entrypoint.sh
+```
+ 
+* you can customize the ``` JAVA_OPTS ``` value in docker-compose.yml
+ 
 
-```
-* Summary of set up
+### 使用现成的docker image:
 
-执行 **rebuild.sh** 生成镜像. 然后run.
+> registry.cn-qingdao.aliyuncs.com/qijunbo/jdk:8
+
+``` 
+docker run --name you-app-name  \
+    -v /fullpath/yourapp.jar:/app/app.jar \
+	-v /fullpath/application.yml:/app/application.yml \
+	-d -P registry.cn-qingdao.aliyuncs.com/qijunbo/jdk:8
 ```
-./rebuild.sh   
-docker run --name you-app-name  -d  -v  /path/of/your/app:/root/webapp   -P  qijunbo/java:8
-```
+
+
+### How do I get set up? ###
+
+- 下载自己喜欢的java版本安装包 jdk-8u151-linux-x64.rpm, 放在当前目录下.
+- 修改Dockerfile
+- 执行rebuild.sh 重新打包.
+
+
+
 
 Deployment instructions
 --
-- 制作jar包
+- 制作供演示用的jar包
 
 从[git@github.com:qijunbo/gs-accessing-data-jpa.git](https://github.com/qijunbo/gs-accessing-data-jpa/tree/jar-yml) 获取jar-yml分支.
 
@@ -45,45 +87,17 @@ Deployment instructions
 至于为什么可靠, 可以参考 [Readme](https://github.com/qijunbo/mysql-docker/tree/mysql-server/8.0)
 
 - Database configuration
-
-获取数据源url
-
+ 
+ 连接到mysql数据库的容器,  
 ```
-./getdburl.sh mysql 
-```
-然后修改 application-prod.yml 里面的 url 
-
-当然, 你也可以使用下面的方法,进行更残酷的测试.
-
-if you app need a datasource in another docker container, use ** --link ** to get connected.
-
-** 你发现没有, 下面这句指令居然没有用(-p 或者 -P)做端口映射 **  也就是说这个容器从外面连不上,只能从里面连.
-
-**经过验证** 下面这句不加(-P/-p)端口映射是没有意义的, 因为你无法访问你的app, **但是**, 启动的mysql容器是可以不加(-P/-p)端口映射, 用下面的方法**可以连接成功** .
-```
-docker run --name you-app-name --link mysql-container:mysql -d  qijunbo/java:8
-
-```
-- 运行起来
-
-```
-./startAppConnectToDB.sh  qijunbo  mysql
+docker run --name you-app-name  \
+    --link mysql-container:mysql  \
+	-v /fullpath/yourapp.jar:/app/app.jar \
+	-v /fullpath/application.yml:/app/application.yml  \
+	-d -P  registry.cn-qingdao.aliyuncs.com/qijunbo/jdk:8
 ```
 
-- How to run tests
-
-```
-docker port qijunbo
-curl -X GET http://ip:port
-```
-
-
-### Contribution guidelines ###
-
-* Other guidelines
-	send pull request from [https://github.com/qijunbo/dockerstudy](https://github.com/qijunbo/dockerstudy)
-	
-
+  
 ### Who do I talk to? ###
 
 * Repo owner or admin
